--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
-# Перенапраление на https
+# Перенаправление на https
 RewriteEngine on
 RewriteCond %{HTTP:X-Forwarded-Proto} !https
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
