--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/register": "7.12.1",
     "@craco/craco": "^6.1.2",
     "@jackwilsdon/craco-use-babelrc": "^1.0.0",
+    "@pbe/react-yandex-maps": "^1.1.9",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/js-cookie": "2.2.6",
     "@types/lodash": "^4.14.168",
@@ -56,7 +57,6 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-select": "^4.2.1",
-    "react-yandex-maps": "^4.6.0",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "socket.io-client": "^4.0.0",
