--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "0.21.0",
     "babel-loader": "8.1.0",
     "babel-plugin-import": "1.13.1",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.1",
     "compression-webpack-plugin": "6.0.4",
     "craco-babel-loader": "^0.1.4",
@@ -47,6 +48,7 @@
     "print-js": "^1.6.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs-2": "^4.3.1",
     "react-colorful": "4.4.2",
     "react-dom": "^17.0.2",
     "react-html-table-to-excel": "^2.0.0",
