--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/react-redux": "7.1.9",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-scroll": "^1.8.3",
-    "antd": "^4.20.6",
+    "antd": "4.24.8",
     "axios": "0.21.0",
     "babel-loader": "8.1.0",
     "babel-plugin-import": "1.13.1",
@@ -51,7 +51,6 @@
     "react-chartjs-2": "^4.3.1",
     "react-colorful": "4.4.2",
     "react-dom": "^17.0.2",
-    "react-html-table-to-excel": "^2.0.0",
     "react-indiana-drag-scroll": "^1.8.1",
     "react-phone-number-input": "^3.1.17",
     "react-redux": "^7.2.4",
